--- a/seatassets/css/message-view.css
+++ b/seatassets/css/message-view.css
@@ -5,3 +5,5 @@
 .reply_text{font-weight: bold; margin-bottom: 7px;}
 .date_time{text-align: right;}
 .reply_btn{text-align: right;}
+.input-xs:focus{background: #ffffff;}
+.forcs_background:focus{background: #ffffff;}
