--- a/seatassets/seat-booking.css
+++ b/seatassets/seat-booking.css
@@ -28,3 +28,5 @@
 .double_cabin_box .icon-btn{ min-width: 60px; }
 
 .user_role_switch{ margin-right: 20px; }
+
+.dataTable > thead > tr > th[class*="sort"]::after{display: none;}
